--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- Link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+
+    <!-- Title -->
+    <title>Bootstrap Freelancer</title>
 </head>
 <body>
-    
+
+    <!-- HEADER -->
+    <header>
+        <div class="container-md">
+            <div class="row">
+                <div class="col-6 my-4">
+                    <div class="content bg-white">
+                        titolo
+                    </div>
+                </div>
+                <div class="col-6 my-4">
+                    <div class="content bg-white">
+                        ul-list
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
 </body>
 </html>
