Added starti bootstrap container lightgreen

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <div class="container-md">
             <div class="row">
                 <div class="col-6 my-4">
-                    <div class="content bg-white">
+                    <div class="bg-white">
                         titolo
                     </div>
                 </div>
                 <div class="col-6 my-4">
-                    <div class="content bg-white">
+                    <div class="bg-white">
                         ul-list
                     </div>
                 </div>
@@ -32,6 +32,29 @@
         </div>
     </header>
 
+    <!-- MAIN -->
+    <main>
+
+        <!-- Container start-bootstrap -->
+        <div class="bg-lightgreen">
+            <div class="container-md">
+                <div class="row">
+                    <div class="col-12 my-4">
+                        <div class="content bg-white"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Container portfolio -->
+        <div class="container-md">
+            <div class="row">
+                <div class="col-12 my-4">
+                    <div class="content bg-white border-black"></div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 </body>
 </html>
