--- a/index.html
+++ b/index.html
@@ -49,8 +49,26 @@
         <!-- Container portfolio -->
         <div class="container-md">
             <div class="row">
-                <div class="col-12 my-4">
+                <div class="col-12 mt-4">
                     <div class="content bg-white border-black"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3">
+                    <div class="content bg-red"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3">
+                    <div class="content bg-skyblue"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3">
+                    <div class="content bg-black"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3">
+                    <div class="content bg-lightblue"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3">
+                    <div class="content bg-blue"></div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 mt-3 mb-4">
+                    <div class="content bg-bisque"></div>
                 </div>
             </div>
         </div>
