Added Container about and changed width container

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- HEADER -->
     <header>
-        <div class="container-md">
+        <div class="container-sm">
             <div class="row">
                 <div class="col-6 my-4">
                     <div class="bg-white">
@@ -37,7 +37,7 @@
 
         <!-- Container start-bootstrap -->
         <div class="bg-lightgreen">
-            <div class="container-md">
+            <div class="container-sm">
                 <div class="row">
                     <div class="col-12 my-4">
                         <div class="content bg-white"></div>
@@ -47,7 +47,7 @@
         </div>
 
         <!-- Container portfolio -->
-        <div class="container-md">
+        <div class="container-sm">
             <div class="row">
                 <div class="col-12 mt-4">
                     <div class="content bg-white border-black"></div>
@@ -69,6 +69,26 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-3 mb-4">
                     <div class="content bg-bisque"></div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Container About -->
+        <div class="bg-lightgreen">
+            <div class="container-sm">
+                <div class="row">
+                    <div class="col-12 mt-4">
+                        <div class="content bg-white"></div>
+                    </div>
+                    <div class="col-12 col-md-6 mt-3">
+                        <div class="content bg-white"></div>
+                    </div>
+                    <div class="col-12 col-md-6 mt-3">
+                        <div class="content bg-white"></div>
+                    </div>
+                    <div class="col-12 mt-3 mb-4">
+                        <div class="content bg-white"></div>
+                    </div>
                 </div>
             </div>
         </div>
