Added changes and completed "contact me" container

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <div class="bg-lightgreen">
             <div class="container-sm">
                 <div class="row">
-                    <div class="col-12 my-4">
-                        <div class="content bg-white"></div>
+                    <div class="col-12">
+                        <div class="content bg-white my-4"></div>
                     </div>
                 </div>
             </div>
@@ -49,26 +49,26 @@
         <!-- Container portfolio -->
         <div class="container-sm">
             <div class="row">
-                <div class="col-12 mt-4">
-                    <div class="content bg-white border-black"></div>
+                <div class="col-12">
+                    <div class="content bg-white border-black mt-4"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3">
-                    <div class="content bg-red"></div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="content mt-3 bg-red"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3">
-                    <div class="content bg-skyblue"></div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="content mt-3 bg-skyblue"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3">
-                    <div class="content bg-black"></div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="content mt-3 bg-black"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3">
-                    <div class="content bg-lightblue"></div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="content mt-3 bg-lightblue"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3">
-                    <div class="content bg-blue"></div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="content mt-3 bg-blue"></div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 mt-3 mb-4">
-                    <div class="content bg-bisque"></div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="content mt-3 mb-4 bg-bisque"></div>
                 </div>
             </div>
         </div>
@@ -77,18 +77,33 @@
         <div class="bg-lightgreen">
             <div class="container-sm">
                 <div class="row">
-                    <div class="col-12 mt-4">
-                        <div class="content bg-white"></div>
+                    <div class="col-12">
+                        <div class="content bg-white mt-4"></div>
                     </div>
-                    <div class="col-12 col-md-6 mt-3">
-                        <div class="content bg-white"></div>
+                    <div class="col-md-6">
+                        <div class="content bg-white mt-3"></div>
                     </div>
-                    <div class="col-12 col-md-6 mt-3">
-                        <div class="content bg-white"></div>
+                    <div class="col-md-6">
+                        <div class="content bg-white mt-3"></div>
                     </div>
-                    <div class="col-12 mt-3 mb-4">
-                        <div class="content bg-white"></div>
+                    <div class="col-12">
+                        <div class="content bg-white mt-3 mb-4"></div>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Container Contact me -->
+        <div class="container-sm">
+            <div class="row">
+                <div class="col-12">
+                    <div class="content bg-white border-black mt-4"></div>
+                </div>
+                <div class="col-12">
+                    <div class="content bg-white border-black"></div>
+                </div>
+                <div class="col-12">
+                    <div class="content bg-white border-black mt-4 mb-4"></div>
                 </div>
             </div>
         </div>
