Created footer and changed the header

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <header>
         <div class="container-sm">
             <div class="row">
-                <div class="col-6 my-4">
-                    <div class="bg-white">
-                        titolo
+                <div class="col-4">
+                    <div class="bg-white my-4">
+                        HEADER
                     </div>
                 </div>
-                <div class="col-6 my-4">
-                    <div class="bg-white">
-                        ul-list
+                <div class="col-4 offset-4">
+                    <div class="bg-white my-4">
+                        HEADER
                     </div>
                 </div>
             </div>
@@ -97,17 +97,43 @@
         <div class="container-sm">
             <div class="row">
                 <div class="col-12">
-                    <div class="content bg-white border-black mt-4"></div>
+                    <div class="content border-black mt-4"></div>
                 </div>
                 <div class="col-12">
-                    <div class="content bg-white border-black"></div>
+                    <div class="content border-black mt-4 mb-4"></div>
                 </div>
-                <div class="col-12">
-                    <div class="content bg-white border-black mt-4 mb-4"></div>
+            </div>
+        </div>
+
+        <!-- Container Data -->
+        <div class="bg-data">
+            <div class="container-sm">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="content my-4 border-black"></div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="content my-4 border-black"></div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="content my-4 border-black mb-4"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
 
+    <!-- FOOTER -->
+    <footer>
+        <div class="container-sm">
+            <div class="row">
+                <div class="col-12">
+                    <div class="bg-white my-4">
+                        FOOTER
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
