Added changes and started header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
     <!-- Title -->
     <title>Bootstrap Freelancer</title>
@@ -16,16 +17,14 @@
 
     <!-- HEADER -->
     <header>
-        <div class="container-sm">
+        <div class="container-lg">
             <div class="row">
-                <div class="col-4">
-                    <div class="bg-white my-4">
-                        HEADER
-                    </div>
+                <div class="col-6">
+                    <h2 class="text-light fs-4 ps-2 text-uppercase">start bootstrap</h2>
                 </div>
-                <div class="col-4 offset-4">
-                    <div class="bg-white my-4">
-                        HEADER
+                <div class="col-6">
+                    <div class="bars pe-2 d-flex align-items-center justify-content-end d-md-none">
+                        <i class="fa-solid fa-bars text-light text-center d-flex"></i> 
                     </div>
                 </div>
             </div>
@@ -37,20 +36,20 @@
 
         <!-- Container start-bootstrap -->
         <div class="bg-lightgreen">
-            <div class="container-sm">
+            <div class="container-lg">
                 <div class="row">
                     <div class="col-12">
-                        <div class="content bg-white my-4"></div>
+                        <div class="content bg-white border-black"></div>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Container portfolio -->
-        <div class="container-sm">
+        <div class="container-lg">
             <div class="row">
                 <div class="col-12">
-                    <div class="content bg-white border-black mt-4"></div>
+                    <div class="title-content bg-white border-black mt-4"></div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="content mt-3 bg-red"></div>
@@ -75,10 +74,10 @@
 
         <!-- Container About -->
         <div class="bg-lightgreen">
-            <div class="container-sm">
+            <div class="container-lg">
                 <div class="row">
                     <div class="col-12">
-                        <div class="content bg-white mt-4"></div>
+                        <div class="title-content bg-white mt-4"></div>
                     </div>
                     <div class="col-md-6">
                         <div class="content bg-white mt-3"></div>
@@ -87,36 +86,33 @@
                         <div class="content bg-white mt-3"></div>
                     </div>
                     <div class="col-12">
-                        <div class="content bg-white mt-3 mb-4"></div>
+                        <div class="title-content bg-white mt-3 mb-4"></div>
                     </div>
                 </div>
             </div>
         </div>
 
         <!-- Container Contact me -->
-        <div class="container-sm">
+        <div class="container-lg">
             <div class="row">
                 <div class="col-12">
-                    <div class="content border-black mt-4"></div>
-                </div>
-                <div class="col-12">
-                    <div class="content border-black mt-4 mb-4"></div>
+                    <div class="content border-black my-4"></div>
                 </div>
             </div>
         </div>
 
         <!-- Container Data -->
         <div class="bg-data">
-            <div class="container-sm">
+            <div class="container-lg">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="content my-4 border-black"></div>
+                        <div class="content mt-3 border-black"></div>
                     </div>
                     <div class="col-md-4">
-                        <div class="content my-4 border-black"></div>
+                        <div class="content mt-3 border-black"></div>
                     </div>
                     <div class="col-md-4">
-                        <div class="content my-4 border-black mb-4"></div>
+                        <div class="content mt-3 border-black mb-4"></div>
                     </div>
                 </div>
             </div>
@@ -125,7 +121,7 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="container-sm">
+        <div class="container-lg">
             <div class="row">
                 <div class="col-12">
                     <div class="bg-white my-4">
