--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col-6">
-                    <h2 class="text-light fs-4 ps-2 text-uppercase">start bootstrap</h2>
+                    <h2 class="text-light fs-4 ps-2 text-uppercase align-items-center">start bootstrap</h2>
                 </div>
                 <div class="col-6">
-                    <div class="bars pe-2 d-flex align-items-center justify-content-end d-md-none">
-                        <i class="fa-solid fa-bars text-light text-center d-flex"></i> 
-                    </div>
+                    <i class="fa-solid fa-bars pe-2 text-light d-flex justify-content-end d-md-none"></i>
+                    <ul class="d-flex justify-content-end pe-2 text-light ul-header text-uppercase d-none d-md-flex">
+                        <li>portfolio</li>
+                        <li class="ps-2">about</li>
+                        <li class="ps-2">contact</li>
+                    </ul> 
                 </div>
             </div>
         </div>
