--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col-6">
-                    <h2 class="text-light fs-4 ps-2 text-uppercase align-items-center">start bootstrap</h2>
+                    <h2 class="text-light ps-2 text-uppercase align-items-center">start bootstrap</h2>
                 </div>
                 <div class="col-6">
                     <i class="fa-solid fa-bars pe-2 text-light d-flex justify-content-end d-md-none"></i>
-                    <ul class="d-flex justify-content-end pe-2 text-light ul-header text-uppercase d-none d-md-flex">
+                    <ul class="d-flex justify-content-end pe-2 text-light text-uppercase d-none d-md-flex">
                         <li>portfolio</li>
                         <li class="ps-2">about</li>
                         <li class="ps-2">contact</li>
@@ -42,7 +42,12 @@
             <div class="container-lg">
                 <div class="row">
                     <div class="col-12">
-                        <div class="content bg-white border-black"></div>
+                        <div class="image">
+                            <img src="./img/avatar.svg" alt="" class="img-fluid">
+                        </div>
+                        <h1 class="text-light text-uppercase text-center mt-4">start bootstrap</h1>
+                        <i class="fa-solid fa-star text-light d-flex justify-content-center"></i>
+                        <p class="text-center text-light text-uppercase mt-3">graphic artist - web designer - illustrator</p>                       
                     </div>
                 </div>
             </div>
@@ -52,25 +57,40 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col-12">
-                    <div class="title-content bg-white border-black mt-4"></div>
+                    <div class="mt-4">
+                        <h2 class="text-center text-uppercase">portfolio</h2>
+                        <i class="fa-solid fa-star d-flex justify-content-center"></i>
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="content mt-3 bg-red"></div>
+                    <div class="mt-3">
+                        <img src="./img/cabin.png" alt="" class="img-fluid">
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="content mt-3 bg-skyblue"></div>
+                    <div class="mt-3">
+                        <img src="./img/cake.png" alt="" class="img-fluid">
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="content mt-3 bg-black"></div>
+                    <div class="mt-3">
+                        <img src="./img/circus.png" alt="" class="img-fluid">
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="content mt-3 bg-lightblue"></div>
+                    <div class="mt-3">
+                        <img src="./img/game.png" alt="" class="img-fluid">
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="content mt-3 bg-blue"></div>
+                    <div class="mt-3">
+                        <img src="./img/safe.png" alt="" class="img-fluid">
+                    </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="content mt-3 mb-4 bg-bisque"></div>
+                    <div class="mt-3 mb-4">
+                        <img src="./img/submarine.png" alt="" class="img-fluid">
+                    </div>
                 </div>
             </div>
         </div>
