Added section about

--- a/index.html
+++ b/index.html
@@ -100,16 +100,33 @@
             <div class="container-lg">
                 <div class="row">
                     <div class="col-12">
-                        <div class="title-content bg-white mt-4"></div>
+                        <div class="mt-4">
+                            <h2 class="text-center text-light text-uppercase">about</h2>
+                            <i class="fa-solid fa-star text-light d-flex justify-content-center"></i>
+                        </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="content bg-white mt-3"></div>
+                        <div class="mt-3">
+                            <p class="text-light ps-md-5">
+                                Freelancer is a free bootstrap theme created by Start Bootstrap.
+                                The download includes the complete source files inlcuding HTML, CSS, and JavaScript
+                                as well as optional LESS stylesheets for easy customization.
+                            </p>
+                        </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="content bg-white mt-3"></div>
+                        <div class="mt-3">
+                            <p class="text-light pe-md-5">
+                                Whetever you're a student looking to showcase your work, a professional
+                                looking to attract clients, or a graphic artist looking to share your projects,
+                                this template is the perfect starting point!
+                            </p>
+                        </div>
                     </div>
                     <div class="col-12">
-                        <div class="title-content bg-white mt-3 mb-4"></div>
+                        <div class="mt-3 mb-4 text-center">
+                            <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-download"></i> Download</button>
+                        </div>
                     </div>
                 </div>
             </div>
