--- a/index.html
+++ b/index.html
@@ -136,7 +136,27 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col-12">
-                    <div class="content border-black my-4"></div>
+                    <div class="my-4">
+                        <h2 class="text-center text-uppercase">contact me</h2>
+                        <i class="fa-solid fa-star d-flex justify-content-center"></i>
+                        <form action="">
+                            <div class="mt-3">
+                                <input type="text" id="name" name="name" placeholder="Name" class="my-input">
+                            </div>
+                            <div class="mt-2">
+                                <input type="email" id="email" name="email" placeholder="Email Address" class="my-input">
+                            </div>
+                            <div class="mt-2">
+                                <input type="tel" id="phone" name="phone" placeholder="Phone Number" class="my-input">
+                            </div>
+                            <div class="mt-2">
+                                <input type="text" id="message" name="message" placeholder="Message" class="my-input message-input">
+                            </div>
+                            <div class="mt-2">
+                                <input type="submit" value="Send" class="btn btn-success">
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
