--- a/index.html
+++ b/index.html
@@ -166,13 +166,40 @@
             <div class="container-lg">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="content mt-3 border-black"></div>
+                        <div class="my-3">
+                            <h4 class="text-center text-light text-uppercase">location</h4>
+                            <p class="text-center text-light">
+                                2215 John Daniel Drive Clark, MO 54243
+                            </p>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="content mt-3 border-black"></div>
+                        <div class="my-3">
+                            <h4 class="text-center text-light text-uppercase">around the web</h4>
+                            <div class="d-flex justify-content-center">
+                                <div class="circle-icons d-flex align-items-center justify-content-center">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </div>
+                                <div class="circle-icons d-flex align-items-center justify-content-center ms-2">
+                                    <i class="fa-brands fa-google-plus-g"></i>
+                                </div>
+                                <div class="circle-icons d-flex align-items-center justify-content-center ms-2">
+                                    <i class="fa-brands fa-twitter"></i>
+                                </div>
+                                <div class="circle-icons d-flex align-items-center justify-content-center ms-2">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="content mt-3 border-black mb-4"></div>
+                        <div class="my-3">
+                            <h4 class="text-light text-center text-uppercase">about freelancer</h4>
+                            <p class="text-center text-light">
+                                Freelancer is a free to use, open source Bootstrap theme created by 
+                                <a href="" class="link-success text-decoration-none">Start Bootstrap</a>.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
