--- a/index.html
+++ b/index.html
@@ -20,15 +20,21 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col-6">
-                    <h2 class="text-light ps-2 text-uppercase align-items-center">start bootstrap</h2>
+                    <h2 class="text-light text-uppercase">start bootstrap</h2>
                 </div>
                 <div class="col-6">
-                    <i class="fa-solid fa-bars pe-2 text-light d-flex justify-content-end d-md-none"></i>
-                    <ul class="d-flex justify-content-end pe-2 text-light text-uppercase d-none d-md-flex">
-                        <li>portfolio</li>
-                        <li class="ps-2">about</li>
-                        <li class="ps-2">contact</li>
-                    </ul> 
+                    <div class="d-md-none text-end mt-2">
+                        <span class="border border-1 text-secondary p-2 border-secondary">
+                            <i class="fa-solid fa-bars"></i>
+                        </span>
+                    </div>
+                    <div class="d-none d-md-block mt-2">
+                        <ul class="list-unstyled text-light d-flex justify-content-end">
+                            <li class="px-3 text-uppercase">portfolio</li>
+                            <li class="px-3 text-uppercase">about</li>
+                            <li class="px-3 text-uppercase">contact</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -38,16 +44,20 @@
     <main>
 
         <!-- Container start-bootstrap -->
-        <div class="bg-lightgreen">
+        <div class="bg-lightgreen py-4">
             <div class="container-lg">
                 <div class="row">
                     <div class="col-12">
-                        <div class="image">
-                            <img src="./img/avatar.svg" alt="" class="img-fluid">
-                        </div>
-                        <h1 class="text-light text-uppercase text-center mt-4">start bootstrap</h1>
-                        <i class="fa-solid fa-star text-light d-flex justify-content-center"></i>
-                        <p class="text-center text-light text-uppercase mt-3">graphic artist - web designer - illustrator</p>                       
+                        <div class="text-light text-center text-uppercase">
+                            <img src="./img/avatar.svg" alt="jumbo-image" class="jumbo-image">
+                            <h1 class="mt-3">start bootstrap</h1>
+                            <div class="star-container">
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <div class="mt-3">
+                                graphic artist - web designer - illustrator
+                            </div>
+                        </div>   
                     </div>
                 </div>
             </div>
@@ -57,39 +67,41 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col-12">
-                    <div class="mt-4">
-                        <h2 class="text-center text-uppercase">portfolio</h2>
-                        <i class="fa-solid fa-star d-flex justify-content-center"></i>
+                    <div class="mt-4 text-center">
+                        <h2 class="text-uppercase">portfolio</h2>
+                        <div class="black-star-container">
+                            <i class="fa-solid fa-star"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mt-3">
-                        <img src="./img/cabin.png" alt="" class="img-fluid">
+                        <img src="./img/cabin.png" alt="" class="img-fluid rounded rounder-2">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mt-3">
-                        <img src="./img/cake.png" alt="" class="img-fluid">
+                        <img src="./img/cake.png" alt="" class="img-fluid rounded rounder-2">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mt-3">
-                        <img src="./img/circus.png" alt="" class="img-fluid">
+                        <img src="./img/circus.png" alt="" class="img-fluid rounded rounder-2">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mt-3">
-                        <img src="./img/game.png" alt="" class="img-fluid">
+                        <img src="./img/game.png" alt="" class="img-fluid rounded rounder-2">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mt-3">
-                        <img src="./img/safe.png" alt="" class="img-fluid">
+                        <img src="./img/safe.png" alt="" class="img-fluid rounded rounder-2">
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="mt-3 mb-4">
-                        <img src="./img/submarine.png" alt="" class="img-fluid">
+                        <img src="./img/submarine.png" alt="" class="img-fluid rounded rounder-2">
                     </div>
                 </div>
             </div>
@@ -97,17 +109,19 @@
 
         <!-- Container About -->
         <div class="bg-lightgreen">
-            <div class="container-lg">
+            <div class="container-lg px-5">
                 <div class="row">
                     <div class="col-12">
-                        <div class="mt-4">
-                            <h2 class="text-center text-light text-uppercase">about</h2>
-                            <i class="fa-solid fa-star text-light d-flex justify-content-center"></i>
+                        <div class="mt-4 text-center">
+                            <h2 class="text-light text-uppercase">about</h2>
+                            <div class="star-container">
+                                <i class="fa-solid fa-star text-light"></i>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="mt-3">
-                            <p class="text-light ps-md-5">
+                            <p class="text-light">
                                 Freelancer is a free bootstrap theme created by Start Bootstrap.
                                 The download includes the complete source files inlcuding HTML, CSS, and JavaScript
                                 as well as optional LESS stylesheets for easy customization.
@@ -116,7 +130,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="mt-3">
-                            <p class="text-light pe-md-5">
+                            <p class="text-light">
                                 Whetever you're a student looking to showcase your work, a professional
                                 looking to attract clients, or a graphic artist looking to share your projects,
                                 this template is the perfect starting point!
@@ -124,7 +138,7 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <div class="mt-3 mb-4 text-center">
+                        <div class="my-4 text-center">
                             <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-download"></i> Download</button>
                         </div>
                     </div>
@@ -133,12 +147,15 @@
         </div>
 
         <!-- Container Contact me -->
-        <div class="container-lg">
+        <div class="container-lg px-5">
             <div class="row">
                 <div class="col-12">
-                    <div class="my-4">
-                        <h2 class="text-center text-uppercase">contact me</h2>
-                        <i class="fa-solid fa-star d-flex justify-content-center"></i>
+                    <div class="my-3 text-center">
+                        <h2 class="text-uppercase">contact me</h2>
+                        <div class="black-star-container">
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                    </div>
                         <form action="">
                             <div class="mt-3">
                                 <input type="text" id="name" name="name" placeholder="Name" class="my-input">
@@ -152,11 +169,10 @@
                             <div class="mt-2">
                                 <input type="text" id="message" name="message" placeholder="Message" class="my-input message-input">
                             </div>
-                            <div class="mt-2">
+                            <div class="my-3">
                                 <input type="submit" value="Send" class="btn btn-success">
                             </div>
                         </form>
-                    </div>
                 </div>
             </div>
         </div>
